--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2028,4 +2028,8 @@
   <public type="style" name="Widget.DeviceDefault.CheckedTextView" id="0x010301db" />
   <public type="style" name="Widget.DeviceDefault.Light.CheckedTextView" id="0x010301dc" />
 
+  <java-symbol type="bool" name="config_forceDisableHardwareKeyboard" />
+
+  <!-- Stylus gestures -->
+  <java-symbol type="bool" name="config_stylusGestures" />
 </resources>
